Final Version Tuesday Presentation

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,5 @@
+
+@import 'styles/variables';
 @import '~bulma/bulma.sass';
 @import 'styles/banner.scss';
 @import 'styles/searchBar.scss';
@@ -5,3 +7,7 @@
 @import 'styles/placeShow.scss';
 @import 'styles/map.scss';
 @import 'styles/forms.scss';
+@import 'styles/home.scss';
+@import 'styles/header.scss';
+@import 'styles/flightsShow.scss';
+//@import '~@fontawesome';
